History
=======

0.1.0b3 - Unreleased
--------------------

- Removed times for past events in event folder
- Changed date format to 'full' and time format to 'short'
- Fixed title in add/edit view for event folders
- Added tests
- Fixed bug concering query of upcoming events

0.1.0b2 - 2012-03-16
--------------------

- Update models to use Declarative for compatibility with Kotti >= 0.6.
- All dates but the start date are now optional for events.
- Added thumbnail and icon views for event pictures.
- Updated layouts and style sheets.

0.1.0b1
-------

- Initial release