@@ -4,6 +4,7 @@ History
 0.1.0b3 - Unreleased
 --------------------
 
+- Rescale event images if larger than 600x600
 - Removed times for past events in event folder
 - Changed date format to 'full' and time format to 'short'
 - Fixed title in add/edit view for event folders
